--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,9 @@ body{
     flex-direction: row;
     justify-content: space-around;  
     margin-left: 5%;
+    width: 10px;
+    height: 50px;
+    align-items: center;
 }
 
 .navH{
@@ -50,11 +53,13 @@ body{
 #hero-info{
     margin: auto;
     width: 60%;
-    border: 3px solid #73AD21;
+    /* border: 3px solid #73AD21; */
     padding: 10px;
     text-align: center;
     margin-top: 100px;
     margin-bottom: 60px;
+    background-color: rgba(137, 43, 226, 0.082);
+    border-radius: 20px;
 }
 .info1{
     font-size: 27px;
@@ -79,26 +84,32 @@ body{
 }
 
 .div1{
-    border: 2px solid #73AD21;
+    /* border: 2px solid #73AD21; */
     margin: auto;
     padding-left: 30px;
-    background-color: rgba(255, 255, 255, 0.521);
+    border-radius: 10px;
+    background-color: #c4c4c44d;
+
 }
 .div1 img{
     padding-right: 25px;
 }
 .div2{
-    border: 2px solid #73AD21;
+    
     margin: auto;
     padding-left: 30px;
+    border-radius: 10px;
+    background-color: #c4c4c44d;
 }
 .div2 img{
     padding-right: 25px;
 }
 .div3{
-    border: 2px solid #73AD21;
+    
     margin: auto;
     padding-left: 30px;
+    border-radius: 10px;
+    background-color: #c4c4c44d;
 }
 .div3 img{
     padding-right: 25px;
