--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ padding: 0;
 /* ==================================Hero Bottom Section Starts===========================*/
 #main{
     display: flex;
+    padding-bottom: 40px;
 }
 
 .locateDiv{
@@ -130,3 +131,29 @@ padding: 0;
     margin-right: 0;
 }
 /* ==================================Hero Bottom Section Ends===========================*/
+
+/*=================================Activities For Everyone Section Starts================================*/
+
+.hundred-div h4{
+    font-size: 17px;
+    text-align: center;
+    padding-top: 20px;
+}
+.hundred-div h1{
+    font-size: 45px;
+    text-align: center;
+    margin: -10px 0 40px 0 ;
+}
+#all-images{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+}
+.img{
+    width: 255px;
+    height: auto;
+    margin-left: 30px;
+    border: 4px solid rgb(130, 221, 145);
+    border-radius: 10px;
+}
+/*=================================Activities For Everyone Section Ends================================*/
