--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,68 @@ padding: 0;
     border-radius: 10px;
 }
 /*=================================Activities For Everyone Section Ends================================*/
+
+/* ===============================Our Philosophy Section Starts */
+.third-title{
+    margin-bottom: 30px;
+}
+
+.third-title h4{
+    font-size: 17px;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.third-title h1{
+    font-size: 45px;
+    text-align: center;
+    margin: -10px 0 40px 0 ;
+}
+
+/* #main-area{
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
+
+} */
+.info-img{
+    width: 675px;
+    height: 445px;
+    margin-right: 20px;
+}
+#info-container{
+    margin-bottom: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.info{
+    display: flex;
+
+    margin-left: 40px;
+    margin-bottom: 20px;
+    border: 3px solid green;
+    border-radius: 10px;
+    /* width: 40%; */
+
+}
+.informations{
+    width: 500px;
+}
+.info-sl{
+    margin-right: 10px;
+    padding: 0 30px 0 10px;
+
+}
+
+/* ===============================Our Philosophy Section Ends=========================================*/
+
+
+
+/* ====================================Hotels and Apartments Starts==================================*/
+
+
+/* ====================================Hotels and Apartments Ends==================================*/
