--- a/styles.css
+++ b/styles.css
@@ -175,12 +175,6 @@ padding: 0;
     margin: -10px 0 40px 0 ;
 }
 
-/* #main-area{
-    margin-left: auto;
-    margin-right: auto;
-    width: 65%;
-
-} */
 .info-img{
     width: 675px;
     height: 445px;
@@ -213,12 +207,14 @@ padding: 0;
     padding: 0 30px 0 10px;
 
 }
-
 /* ===============================Our Philosophy Section Ends=========================================*/
 
 
 
 /* ====================================Hotels and Apartments Starts==================================*/
-
+#main-three-countries{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 
 /* ====================================Hotels and Apartments Ends==================================*/
