--- a/styles.css
+++ b/styles.css
@@ -213,8 +213,27 @@ padding: 0;
 
 /* ====================================Hotels and Apartments Starts==================================*/
 #main-three-countries{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 40px;
+}
+.c-title-star{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.five-star{
+    color: #FF9921;
+}
+.price > h3{
+    margin-top: -10px;
+    font-weight: 900;
+    
+
 }
 
 /* ====================================Hotels and Apartments Ends==================================*/
